--- a/train.yaml
+++ b/train.yaml
@@ -14,5 +14,5 @@ data: # Configuration for data
   dataset: cifar100 # String indicates the name of the dataset
   f_train: 0.5 # Float number from 0 to 1 indicating the fraction of the train dataset
   f_test: 0.5 # Float number from 0 to 1 indicating the size of the test set
-  augment: True
+  augment: False
   root: ./data # String about where to save the data.
