added dataset setup for tabular datasets

--- a/study.yaml
+++ b/study.yaml
@@ -1,10 +1,10 @@
 study: # Configuration for training
-  study_name: "cifar100-resnet-baseline"
+  study_name: "purchase100-resnet-baseline"
   trials: 50
   epochs: 50 # Integer number for indicating the epochs for training target model.
   batch_size: 128 # Integer number for indicating batch size for training the target model.
   optimizer: SGD # String which indicates the optimizer.
-  model: resnet
+  model: mlp3
   gpu_ids:  # List of available gpus to use for parallell processing, this needs to be checked before every run
     - 0
     - 1
@@ -17,11 +17,10 @@ study: # Configuration for training
   root: ./study
 
 data: # Configuration for data
-  dataset: cifar100 # String indicates the name of the dataset
-  default_dist: False # Should custom training and testing dataset be used, if false f_train and f_test will be used
+  dataset: purchase100 # String indicates the name of the dataset
   f_train: 0.5 # Float number from 0 to 1 indicating the fraction of the train dataset
   f_test: 0.5 # Float number from 0 to 1 indicating the size of the test set
-  augment: True
+  augment: False
   root: ./data # String about where to save the data.
 
 
