fixed small bug

--- a/study_fbd.yaml
+++ b/study_fbd.yaml
@@ -1,6 +1,6 @@
 fbd_study: # Configuration for training
-  study_name: "wideresnet-cinic10-fbd"
-  target_folder: "wideresnet-cinic10-6ea417c51c"
+  study_name: "purchase100-mlp4-fbd"
+  target_folder: "mlp4-purchase100-d6b4f54d5a"
   trials: 1000
   epochs: 25 # Integer number for indicating the epochs for training target model.
   batch_size: 128 # Integer number for indicating batch size for training the target model.
@@ -9,7 +9,7 @@ fbd_study: # Configuration for training
   momentum: 0.9
   weight_decay: 0.0 # Float number for indicating weight decay for training the target model. For speedyresnet, it uses its own weight_decay.
   t_max: 30 # Scheduler start point for adjusting the learing rate
-  model: wideresnet
+  model: mlp4
   shadow_model_count: 256
   gpu_ids:  # List of available gpus to use for parallell processing, this needs to be checked before every run
     - 0
@@ -23,7 +23,7 @@ fbd_study: # Configuration for training
   root: ./study
 
 data: # Configuration for data
-  dataset: cinic10 # String indicates the name of the dataset
+  dataset: purchase100 # String indicates the name of the dataset
   default_dist: False # Should custom training and testing dataset be used, if false f_train and f_test will be used
   f_train: 0.5 # Float number from 0 to 1 indicating the fraction of the train dataset
   f_test: 0.5 # Float number from 0 to 1 indicating the size of the test set
