--- a/train.yaml
+++ b/train.yaml
@@ -3,7 +3,7 @@ train: # Configuration for training
   epochs: 50 # Integer number for indicating the epochs for training target model. For speedyresnet, it uses its own number of epochs.
 
 data: # Configuration for data
-  dataset: purchase100 # String indicates the name of the dataset
+  dataset: texas100 # String indicates the name of the dataset
   f_train: 0.5 # Float number from 0 to 1 indicating the fraction of the train dataset
   f_test: 0.5 # Float number from 0 to 1 indicating the size of the test set
   root: ./data # String about where to save the data.
