--- a/study_fbd.yaml
+++ b/study_fbd.yaml
@@ -2,6 +2,8 @@ fbd_study: # Configuration for training
   target_folder: "mlp3-purchase100-1594b978b1"
   trials: 1000
   shadow_model_count: 256
+  privacy_onion: False,
+  noise_injection: False,
   root: ./study
 
 data: # Configuration for data
